@@ -1,5 +1,11 @@
 2008-10-02  Richard Hult  <richard@imendio.com>
 
+	* src/dh-search.c:
+	* src/dh-search.h: Add private instance data and fixup
+	whitepace/style.
+
+2008-10-02  Richard Hult  <richard@imendio.com>
+
 	* src/dh-book-tree.c:
 	* src/dh-book-tree.h: Whitespace cleanup.
 
